[package]
name = "constdefault"
version = "1.0.1"
edition = "2018"
authors = ["AerialX", "semtexzv"]

categories = ["no-std"]

description = "A const Default trait"
documentation = "https://docs.rs/constdefault"
repository = "https://github.com/semtexzv/const-default.rs"
readme = "README.md"
license = "MIT"

[dependencies]
constdefault-derive = { path = "derive", version = "0.2.1", optional = true }

[features]
default = ["enable-atomics"]
std = ["alloc"]
alloc = []
derive = ["constdefault-derive"]
unstable = []
unstable-docs = []
enable-atomics = []

[package.metadata.docs.rs]
all-features = true

[workspace]
members = [
	"derive",
]
