[package]
name = "constdefault-derive"
version = "0.2.1"
edition = "2018"
authors = ["AerialX", "semtexzv"]

description = "#[derive(ConstDefault)]"
documentation = "https://docs.rs/constdefault-derive"
repository = "https://github.com/semtexzv/const-default.rs"
readme = "../README.md"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", default-features = false, features = ["derive", 
 "parsing", "proc-macro", "printing"] }

[dev-dependencies]
constdefault = { path = "..", features = ["derive"] }
